--- a/views/creativeWorks/movie/form.ejs
+++ b/views/creativeWorks/movie/form.ejs
@@ -1,8 +1,8 @@
 <div class="form-group row">
-    <label for="name" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        作品名<font color="red">＊</font>
+    <label for="name" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        作品名<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control" name="name" id="name" placeholder="" maxlength=64 value="<%= forms.name %>">
         <p class="message">
             全角64文字以内でご入力ください。
@@ -15,10 +15,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="headline">
+    <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="headline">
         サブタイトル
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control" name="headline" id="headline" placeholder="" maxlength=64 value="<%= forms.headline %>">
         <p class="message">
             全角64文字以内でご入力ください。
@@ -31,10 +31,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="duration" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="duration" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         上映時間
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control" style="width:30%;display:inline-block;" name="duration" id="duration" placeholder=""
             maxlength=10 value="<%= forms.duration %>">
         分
@@ -49,10 +49,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="contentRating" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        レイティング<font color="red">＊</font>
+    <label for="contentRating" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        レイティング<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <%
             let ratings = [
                 {code: '', name: {ja: 'なし', en:'None'}},
@@ -78,18 +78,18 @@
     </div>
 </div>
 <div class="form-group row">
-    <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="datePublished">
+    <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="datePublished">
         公開日
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control datepicker" name="datePublished" autocomplete="off" id="datePublished" value="<%= forms.datePublished %>">
     </div>
 </div>
 <div class="form-group row">
-    <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="offers[availabilityEnds]">
+    <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="offers[availabilityEnds]">
         興行終了予定日
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control datepicker" name="offers[availabilityEnds]" autocomplete="off" id="offers[availabilityEnds]"
             value="<%= (forms.offers !== undefined) ? forms.offers.availabilityEnds : '' %>">
     </div>
