--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -1,20 +1,27 @@
-<div class="modal" id="newModal" tabindex="-1">
-    <div class="modal-dialog modal-lg">
-        <div class="modal-content">
+<div class="modal fade" id="newModal" tabindex="-1">
+    <div class="modal-dialog modal-dialog-scrollable modal-dialog-centered modal-lg">
+        <div class="modal-content" role="document">
             <div class="modal-header">
-                <button type="button" class="close" data-dismiss="modal"><span>×</span></button>
                 <h4 class="modal-title">スケジュール新規登録</h4>
+                <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                    <span aria-hidden="true">&times;</span>
+                </button>
             </div>
+
+
             <div class="modal-body">
-                <div class="panel-body">
+                <div class="panel-body form-container">
                     <form class="p-3 bg-light-gray">
-                        <div class="form-group form-inline">
-                            <label class="col-md-3 control-label text-right" for="theater">劇場<font color="red">＊</font></label>
-                            <div class="col-md-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="theater">劇場<font
+                                    color="red">＊</font>
+                            </label>
+                            <div class="col-md-8">
                                 <select class="form-control" name="theater">
                                     <option value="" disabled selected>選択してください</option>
                                     <% for (const movieTheater of movieTheaters) { %>
-                                    <option value="<%= movieTheater.branchCode %>" data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
+                                    <option value="<%= movieTheater.branchCode %>"
+                                        data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
                                         data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
                                         data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
                                         <%= movieTheater.name.ja %>
@@ -23,66 +30,83 @@
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group form-inline">
-                            <label class="col-md-3 control-label text-right" for="screen">作品<font color="red">＊</font></label>
-                            <div class="col-md-9 form-inline">
+                        <div class="form-group row">
+                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="screen">作品 <span
+                                    class="text-danger">＊</span></label>
+                            <div class="col-md-8 form-inline">
                                 <select class="form-control" name="screeningEventSeriesId">
                                     <option value="">劇場を選択してください</option>
                                 </select>
                             </div>
                         </div>
-                        <div class="form-group form-inline">
-                            <label class="col-md-3 control-label text-right" for="screen">スクリーン<font color="red">＊</font></label>
-                            <div class="col-md-9">
+                        <div class="form-group row">
+                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0" for="screen">スクリーン <span
+                                    class="text-danger">＊</span></label>
+                            <div class="col-md-8">
                                 <select class="form-control" name="screen">
                                     <option value="">劇場を選択してください</option>
                                 </select>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-md-3 control-label text-right">登録期間<font color="red">＊</font></label>
-                            <div class="col-md-9 form-inline">
-                                <input class="form-control datepicker" name="screeningDateStart" placeholder="YYYY/MM/DD"
-                                    maxlength=10>
-                                〜
-                                <input class="form-control datepicker" name="screeningDateThrough" placeholder="YYYY/MM/DD"
-                                    maxlength=10>
+                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">登録期間（from） <span
+                                    class="text-danger">＊</span></label>
+                            <div class="col-md-8 form-inline">
+                                <input class="form-control datepicker" name="screeningDateStart"
+                                    placeholder="YYYY/MM/DD" maxlength=10>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-md-3 control-label text-right">曜日<font color="red">＊</font></label>
-                            <div class="col-md-9 form-inline">
-                                <label class="checkbox-inline"><input type="checkbox" value="1" name="weekDay" checked>月</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="2" name="weekDay" checked>火</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="3" name="weekDay" checked>水</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="4" name="weekDay" checked>木</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="5" name="weekDay" checked>金</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="6" name="weekDay" checked>土</label>
-                                <label class="checkbox-inline"><input type="checkbox" value="0" name="weekDay" checked>日</label>
+                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">登録期間（Through） <span
+                                    class="text-danger">＊</span></label>
+                            <div class="col-md-8 form-inline">
+                                <input class="form-control datepicker" name="screeningDateThrough"
+                                    placeholder="YYYY/MM/DD" maxlength=10>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-md-3 control-label text-right" for="onlineDisplayStartDate">オンライン表示開始日</label>
-                            <div class="col-md-9 form-inline">
-                                <input class="form-control datepicker" name="onlineDisplayStartDate" placeholder="YYYY/MM/DD"
-                                    maxlength=10>
+                            <label class="col-md-4 pt-0 text-md-right mb-2 mb-md-0">曜日 <span
+                                    class="text-danger">＊</span></label>
+                            <div class="col-md-8 form-inline">
+                                <label class="checkbox-inline mr-3"><input type="checkbox" value="1" name="weekDay"
+                                        checked>月</label>
+                                <label class="checkbox-inline mr-3"><input type="checkbox" value="2" name="weekDay"
+                                        checked>火</label>
+                                <label class="checkbox-inline mr-3"><input type="checkbox" value="3" name="weekDay"
+                                        checked>水</label>
+                                <label class="checkbox-inline mr-3"><input type="checkbox" value="4" name="weekDay"
+                                        checked>木</label>
+                                <label class="checkbox-inline mr-3"><input type="checkbox" value="5" name="weekDay"
+                                        checked>金</label>
+                                <label class="checkbox-inline mr-3"><input type="checkbox" value="6" name="weekDay"
+                                        checked>土</label>
+                                <label class="checkbox-inline mr-3"><input type="checkbox" value="0" name="weekDay"
+                                        checked>日</label>
                             </div>
                         </div>
                         <div class="form-group row">
-                            <label class="col-md-3 control-label text-right">座席指定<font color="red">＊</font></label>
-                            <div class="col-md-9 form-inline">
-                                <label class="checkbox-inline"><input type="checkbox" value="1" name="reservedSeatsAvailable"
-                                        checked>座席指定あり</label>
+                            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"
+                                for="onlineDisplayStartDate">オンライン表示開始日</label>
+                            <div class="col-md-8 form-inline">
+                                <input class="form-control datepicker" name="onlineDisplayStartDate"
+                                    placeholder="YYYY/MM/DD" maxlength=10>
                             </div>
                         </div>
-                        <table class="table table-bordered">
+                        <div class="form-group row">
+                            <label class="col-md-4 pt-0 text-md-right mb-2 mb-md-0">座席指定 <span
+                                    class="text-danger">＊</span></label>
+                            <div class="col-md-8 form-inline">
+                                <label class="checkbox-inline mr-3"><input type="checkbox" value="1"
+                                        name="reservedSeatsAvailable" checked>座席指定あり</label>
+                            </div>
+                        </div>
+                        <div class="scroll-horizontal">
+                        <table class="table table-bordered text-small">
                             <thead>
-                                <th class="text-center">パフォマンス</th>
-                                <th class="text-center">開場時刻</th>
-                                <th class="text-center">開始時刻</th>
-                                <th class="text-center">終了時刻</th>
+                                <th class="text-center">No</th>
+                                <th class="text-center">開場時刻<br>開始時刻<br>終了時刻</th>
                                 <th class="text-center">券種グループ</th>
-                                <th class="text-center mvtk" style="max-width: 80px">ムビチケ対象外</th>
+                                <th class="text-center mvtk" style="max-width: 80px">ムビチケ<br>対象外</th>
                             </thead>
                             <tbody>
                                 <% for (let i = 1; i <= 6; i++) { %>
@@ -90,29 +114,25 @@
                                     <td class="text-center">
                                         <%= i %>
                                     </td>
-                                    <td class="form-inline">
+                                    <td class="d-flex justify-content-center align-items-center">
                                         <%- include('../../common/part/_timeSelector', {
                                             hourName: 'doorTimeHour',
                                             minuteName: 'doorTimeMinute'
                                         }) %>
                                     </td>
-                                    <td class="form-inline">
-                                        <div class="col-md-12">
-                                            <%- include('../../common/part/_timeSelector', {
-                                            hourName: 'startTimeHour',
-                                            minuteName: 'startTimeMinute'
-                                        }) %>
-                                        </div>
+                                    <td class="d-flex justify-content-center align-items-center">
+                                        <%- include('../../common/part/_timeSelector', {
+                                                hourName: 'startTimeHour',
+                                                minuteName: 'startTimeMinute'
+                                            }) %>
                                     </td>
-                                    <td class="form-inline">
-                                        <div class="col-md-12">
-                                            <%- include('../../common/part/_timeSelector', {
-                                            hourName: 'endTimeHour',
-                                            minuteName: 'endTimeMinute'
-                                        }) %>
-                                        </div>
+                                    <td class="d-flex justify-content-center align-items-center">
+                                        <%- include('../../common/part/_timeSelector', {
+                                                hourName: 'endTimeHour',
+                                                minuteName: 'endTimeMinute'
+                                            }) %>
                                     </td>
-                                    <td class="form-inline">
+                                    <td>
                                         <select class="form-control" name="ticketTypeGroup">
                                             <option value="" disabled selected>選択してください</option>
                                             <% for (ticketType of ticketGroups) { %>
@@ -122,13 +142,14 @@
                                             <% } %>
                                         </select>
                                     </td>
-                                    <td class="form-inline text-center mvtk">
+                                    <td class="text-center mvtk">
                                         <input type="checkbox" name="mvtkExcludeFlg">
                                     </td>
                                 </tr>
                                 <% } %>
                             </tbody>
                         </table>
+                        </div>
                         <!-- <div class="form-group row">
                             <%- include('../../common/part/_timeSelector', {
                                 label: '開場時刻',
@@ -156,7 +177,7 @@
             <input type="hidden" name="maxSeatNumber" value="">
             <input type="hidden" name="saleStartDays" value="">
             <div class="modal-footer">
-                <button type="button" class="btn btn-default" data-dismiss="modal">閉じる</button>
+                <button type="button" class="btn bg-dark-gray text-white" data-dismiss="modal">閉じる</button>
                 <button type="button" class="btn btn-primary regist-button">パフォーマンスを登録</button>
             </div>
         </div>
