--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -10,8 +10,8 @@ Aa-4
 <div class="form-container search p-3 bg-light-gray mb-4">
     <form>
         <div class="form-group row">
-            <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">劇場</label>
-            <div class="col-md-9">
+            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">劇場 <span class="text-danger">＊</span></label>
+            <div class="col-md-8">
                 <select class="form-control" name="theater">
                     <option value="">選択してください</option>
                     <% for (const movieTheater of movieTheaters) { %>
@@ -21,26 +21,28 @@ Aa-4
             </div>
         </div>
         <div class="form-group row">
-            <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">上映日</label>
-            <div class="col-md-9">
+            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">上映日 <span class="text-danger">＊</span></label>
+            <div class="col-md-8">
                 <input autocomplete="off" class="form-control datepicker" name="date" placeholder="選択してください"
                     maxlength="10">
             </div>
         </div>
         <div class="form-group row">
-            <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">日付</label>
-            <div class="col-md-9 form-inline py-3">
-                <input class="form-check-input" type="radio" name="days" id="radio-days-1" value="1" checked>
-                <label class="form-check-label mr-3" for="radio-days-1">1日</label>
-                <input class="form-check-input" type="radio" name="days" id="radio-days-3" value="3">
-                <label class="form-check-label mr-3" for="radio-days-3">3日</label>
-                <input class="form-check-input" type="radio" name="days" id="radio-days-7" value="7">
-                <label class="form-check-label" for="radio-days-7">7日</label>
+            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">日付 <span class="text-danger">＊</span></label>
+            <div class="col-md-8 py-3">
+                <div class="pl-4">
+                        <input class="form-check-input" type="radio" name="days" id="radio-days-1" value="1" checked>
+                        <label class="form-check-label mr-3" for="radio-days-1">1日</label>
+                        <input class="form-check-input" type="radio" name="days" id="radio-days-3" value="3">
+                        <label class="form-check-label mr-3" for="radio-days-3">3日</label>
+                        <input class="form-check-input" type="radio" name="days" id="radio-days-7" value="7">
+                        <label class="form-check-label" for="radio-days-7">7日</label>
+                </div>
             </div>
         </div>
         <div class="form-group row">
-            <label class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">シアター</label>
-            <div class="col-md-9">
+            <label class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">シアター</label>
+            <div class="col-md-8">
                 <select class="form-control" name="screen">
                     <option value="">劇場を選択してください</option>
                 </select>
