--- a/views/events/screeningEventSeries/form.ejs
+++ b/views/events/screeningEventSeries/form.ejs
@@ -1,8 +1,8 @@
 <div class="form-group row">
-    <label for="locationBranchCode" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        劇場<font color="red">＊</font>
+    <label for="locationBranchCode" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        劇場<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <select class="form-control" name="locationBranchCode">
             <option value="">選択してください</option>
             <% for (const movieTheater of movieTheaters) { %>
@@ -16,10 +16,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="locationBranchCode" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        作品<font color="red">＊</font>
+    <label for="locationBranchCode" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        作品<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <select class="form-control" name="workPerformed[identifier]" id="workPerformed[identifier]">
             <option value="">選択してください</option>
             <% for (const movie of movies) { %>
@@ -39,10 +39,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="nameJa" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        上映作品名<font color="red">＊</font>
+    <label for="nameJa" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        上映作品名<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control" name="nameJa" id="nameJa" placeholder="" maxlength=64 value="<%= forms.nameJa %>">
         <p class="message">
             全角64文字以内でご入力ください。
@@ -55,10 +55,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="kanaName" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="kanaName" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         上映作品名カナ
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control" name="kanaName" id="kanaName" placeholder="" maxlength=64 value="<%= forms.kanaName %>">
         <p class="message">
             全角64文字以内でご入力ください。
@@ -71,10 +71,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="nameEn" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="nameEn" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         上映作品名英
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control" name="nameEn" id="nameEn" placeholder="" maxlength=128 value="<%- forms.nameEn %>">
         <p class="message">
             半角128文字以内でご入力ください。
@@ -88,10 +88,10 @@
 </div>
 
 <div class="form-group row">
-    <label for="headline[ja]" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="headline[ja]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         上映作品サブタイトル名
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control" name="headline[ja]" id="headline[ja]" placeholder="" maxlength=64 value="<%- forms.headline.ja %>">
         <p class="message">
             全角64文字以内でご入力ください。
@@ -104,28 +104,28 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="signageDisplayName" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="signageDisplayName" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         サイネージ表示名
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control" name="signageDisplayName" id="signageDisplayName" placeholder="" value="<%- forms.signageDisplayName %>">
     </div>
 </div>
 <div class="form-group row">
-    <label for="signageDislaySubtitleName" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="signageDislaySubtitleName" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         サイネージ表示名サブタイトル
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control" name="signageDislaySubtitleName" id="signageDislaySubtitleName" placeholder=""
             value="<%- forms.signageDislaySubtitleName %>">
     </div>
 </div>
 
 <div class="form-group row">
-    <label for="startDate" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        上映開始日<font color="red">＊</font>
+    <label for="startDate" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        上映開始日<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input autocomplete="off" class="form-control datepicker" style="width:30%;display:inline-block;" name="startDate"
             id="startDate" placeholder="" maxlength=10 value="<%= forms.startDate %>">
         <p class="error message text-danger">
@@ -136,10 +136,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="endDate" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        上映終了日<font color="red">＊</font>
+    <label for="endDate" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        上映終了日<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input autocomplete="off" class="form-control datepicker" style="width:30%;display:inline-block;" name="endDate"
             id="endDate" placeholder="" maxlength=10 value="<%= forms.endDate %>">
         <p class="error message text-danger">
@@ -151,10 +151,10 @@
 </div>
 
 <div class="form-group row">
-    <label for="summaryStartDay" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        集計開始曜日<font color="red">＊</font>
+    <label for="summaryStartDay" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        集計開始曜日<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <%
             let dayInWeeks = [
                 {code: '1', name: {ja: '月', en:'monday'}},
@@ -185,10 +185,10 @@
 </div>
 
 <div class="form-group row">
-    <label for="contentRating" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        レイティング<font color="red">＊</font>
+    <label for="contentRating" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        レイティング<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <%
             let ratings = [
                 {code: 'G', name: {ja: 'なし', en:'General Audience'}},
@@ -214,10 +214,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="translationType" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="translationType" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         字幕/吹替
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <%
             let subtitles = [
                 {code: '0', name: {ja: '字幕', en:'subtitle'}},
@@ -237,10 +237,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="videoFormat" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        上映形態<font color="red">＊</font>
+    <label for="videoFormat" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        上映形態<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <% Object.keys(VideoFormatType).forEach((key) => { %>
         <input type="checkbox" name="videoFormatType[]" value="<%= VideoFormatType[key] %>" <% if
             (forms.videoFormatType.indexOf(VideoFormatType[key])>= 0) { %>checked="checked"
@@ -256,19 +256,19 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="mvtkFlg" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="mvtkFlg" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         ムビチケ利用
     </label>
-    <div class="col-md-9 form-inline">
+    <div class="col-md-8 form-inline">
         <input type="checkbox" <% if (forms.mvtkFlg==1) { %> checked
         <% } %> value="1" name="mvtkFlg">
     </div>
 </div>
 <div class="form-group row">
-    <label for="description" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="description" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         補足説明
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input class="form-control" name="description" id="description" placeholder="" maxlength=30 value="<% if (forms.description !== undefined && forms.description.ja) { %> <%- forms.description.ja %> <% } %>">
         <p class="message">
             全角30文字以内でご入力ください。
