--- a/views/layouts/header.ejs
+++ b/views/layouts/header.ejs
@@ -3,7 +3,7 @@
     <div class="header contents-width mx-auto d-flex align-items-center justify-content-between p-3">
         <div class="d-flex align-items-center">
             <img class="logo mr-md-3" src="/images/ProjectIcon.png" alt="">
-            <h1 class="text-large d-none d-md-block">Chevre</h1>
+            <h1 class="text-x-large d-none d-md-block">Chevre</h1>
         </div>
         <div class="d-flex align-items-center">
             <div class="mr-3"><%= user.profile.family_name %> <%= user.profile.given_name %></div>
