--- a/views/serviceTypes/add.ejs
+++ b/views/serviceTypes/add.ejs
@@ -16,10 +16,10 @@ Aa-16
             <%- include('../common/successMessage') %>
         </div>
         <div class="form-group row">
-            <label for="id" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-                興行区分コード<font color="red">＊</font>
+            <label for="id" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+                興行区分コード<span class="text-danger">＊</span>
             </label>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64
                     value="<%= forms.id %>">
                 <p class="message">
