--- a/views/ticketTypeGroup/add.ejs
+++ b/views/ticketTypeGroup/add.ejs
@@ -17,10 +17,10 @@ Aa-7
         </div>
 
         <div class="form-group row">
-            <label for="id" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-                券種グループコード<font color="red">＊</font>
+            <label for="id" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+                券種グループコード<span class="text-danger">＊</span>
             </label>
-            <div class="col-md-9">
+            <div class="col-md-8">
                 <input type="text" class="form-control" name="id" id="id" placeholder="" maxlength=64
                     value="<%= forms.id %>">
                 <p class="message">
