--- a/views/ticketTypeGroup/form.ejs
+++ b/views/ticketTypeGroup/form.ejs
@@ -1,8 +1,8 @@
 <div class="form-group row">
-    <label for="name[ja]" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        券種グループ名<font color="red">＊</font>
+    <label for="name[ja]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        券種グループ名<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input type="text" class="form-control" name="name[ja]" id="name[ja]" placeholder="" maxlength=64 value="<%= forms.name.ja %>">
         <p class="message">
             全角64文字以内でご入力ください。
@@ -15,10 +15,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="name[en]" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        券種グループ名英<font color="red">＊</font>
+    <label for="name[en]" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        券種グループ名英<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input type="text" class="form-control" name="name[en]" id="name[en]" placeholder="" maxlength=64 value="<%= forms.name.en %>">
         <p class="message">
         </p>
@@ -30,16 +30,16 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="ticketTypes" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        対象券種名<font color="red">＊</font>
+    <label for="ticketTypes" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        対象券種名<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9"></div>
+    <div class="col-md-8"></div>
 </div>
 <div class="form-group row">
-    <span for="price" class="col-md-3  pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <span for="price" class="col-md-4  pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         券種売上金額
     </span>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input type="number" class="form-control" name="price" id="price" placeholder="" maxlength=10>
         <p class="error message text-danger">
             <% if (errors && errors.ticketTypes) { %>
@@ -47,7 +47,7 @@
             <% } %>
         </p>
     </div>
-    <div class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"></div>
+    <div class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0"></div>
     <div id="price-list" class="mx-auto">
         <ul id="sortable1" class="connectedSortable">
 
@@ -65,10 +65,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="description.ja" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="description.ja" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         補足説明
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input type="text" class="form-control" name="description[ja]" id="description.ja" placeholder="" maxlength=64
             value="<%= forms.description.ja %>">
         <p class="message">
@@ -82,10 +82,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="description.en" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+    <label for="description.en" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
         補足説明英
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <input type="text" class="form-control" name="description[en]" id="description.en" placeholder="" maxlength=64
             value="<%= forms.description.en %>">
         <p class="message">
@@ -98,10 +98,10 @@
     </div>
 </div>
 <div class="form-group row">
-    <label for="serviceType" class="col-md-3 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
-        興行区分<font color="red">＊</font>
+    <label for="serviceType" class="col-md-4 pt-0 pt-md-3 text-md-right mb-2 mb-md-0">
+        興行区分<span class="text-danger">＊</span>
     </label>
-    <div class="col-md-9">
+    <div class="col-md-8">
         <select name="serviceType" id="serviceType" class="form-control">
             <% for (let serviceType of serviceTypes) { %>
             <% if (forms.serviceType === serviceType.id) { %>
