--- a/views/layouts/side.ejs
+++ b/views/layouts/side.ejs
@@ -11,10 +11,12 @@
                         <li class="<%= (displayId === 'Aa-10') ? 'active': ''; %>"><a href="/creativeWorks/movie">
                                         <i class="glyphicon glyphicon-list"></i> 映画作品検索</a>
                         </li>
-                        <li class="<%= (displayId === 'Aa-2') ? 'active': ''; %>"><a href="/events/screeningEventSeries/add">
+                        <li class="<%= (displayId === 'Aa-2') ? 'active': ''; %>"><a
+                                        href="/events/screeningEventSeries/add">
                                         <i class="glyphicon glyphicon-plus"></i> 劇場上映作品登録</a>
                         </li>
-                        <li class="<%= (displayId === 'Aa-3') ? 'active': ''; %>"><a href="/events/screeningEventSeries">
+                        <li class="<%= (displayId === 'Aa-3') ? 'active': ''; %>"><a
+                                        href="/events/screeningEventSeries">
                                         <i class="glyphicon glyphicon-list"></i> 劇場上映作品検索</a>
                         </li>
                         <li class="<%= (displayId === 'Aa-4') ? 'active': ''; %>"><a href="/events/screeningEvent">
@@ -32,11 +34,21 @@
                         <li class="<%= (displayId === 'Aa-8') ? 'active': ''; %>"><a href="/ticketTypeGroups">
                                         <i class="glyphicon glyphicon-list"></i> 券種グループ検索</a>
                         </li>
-                        <li class="<%= (displayId === 'AT-02') ? 'active': ''; %>"><a href="/accountTitles/accountTitleCategory/new">
+                        <li class="<%= (displayId === 'AT-02') ? 'active': ''; %>"><a
+                                        href="/accountTitles/accountTitleCategory/new">
                                         <i class="glyphicon glyphicon-plus"></i> 科目分類登録</a>
                         </li>
-                        <li class="<%= (displayId === 'AT-03') ? 'active': ''; %>"><a href="/accountTitles/accountTitleSet/new">
+                        <li class="<%= (displayId === 'AT-05') ? 'active': ''; %>"><a
+                                        href="/accountTitles/accountTitleCategory">
+                                        <i class="glyphicon glyphicon-list"></i> 科目分類検索</a>
+                        </li>
+                        <li class="<%= (displayId === 'AT-03') ? 'active': ''; %>"><a
+                                        href="/accountTitles/accountTitleSet/new">
                                         <i class="glyphicon glyphicon-plus"></i> 科目登録</a>
+                        </li>
+                        <li class="<%= (displayId === 'AT-06') ? 'active': ''; %>"><a
+                                        href="/accountTitles/accountTitleSet">
+                                        <i class="glyphicon glyphicon-list"></i> 科目検索</a>
                         </li>
                         <li class="<%= (displayId === 'AT-04') ? 'active': ''; %>"><a href="/accountTitles/new">
                                         <i class="glyphicon glyphicon-plus"></i> 細目登録</a>
