--- a/views/events/screeningEvent/add.ejs
+++ b/views/events/screeningEvent/add.ejs
@@ -12,13 +12,23 @@
                             <label class="col-sm-3 control-label text-right" for="theater">劇場<font color="red">＊</font></label>
                             <div class="col-sm-9 form-inline">
                                 <select class="form-control" name="theater">
-                                    <option value="" disabled selected>選択してください</option>
-                                    <% for (const movieTheater of movieTheaters) { %>
-                                    <option value="<%= movieTheater.branchCode %>" data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
-                                        data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
-                                        data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
-                                        <%= movieTheater.name.ja %>
-                                    </option>
+                                    <% if (user.permission.movieTheaters.length === 0) { %>
+                                        <option value="<%= user.permission.movieTheaters.length %>" disabled selected>選択してください</option>
+                                        <% for (const movieTheater of movieTheaters) { %>
+                                        <option value="<%= movieTheater.branchCode %>" data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
+                                            data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
+                                            data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
+                                            <%= movieTheater.name.ja %>
+                                        </option>
+                                        <% } %>
+                                    <% } else { %>
+                                        <% for (const movieTheater of user.permission.movieTheaters) { %>
+                                            <option value="<%= movieTheater.branchCode %>" data-max-seat-number="<%= movieTheater.offers.eligibleQuantity.maxValue %>"
+                                                data-sale-start-days="<%= -movieTheater.offers.availabilityStartsGraceTime.value %>"
+                                                data-end-sale-time="<%= Math.floor(movieTheater.offers.availabilityEndsGraceTime.value / 60) %>">
+                                                <%= movieTheater.name.ja %>
+                                            </option>
+                                        <% } %>
                                     <% } %>
                                 </select>
                             </div>
