--- a/views/events/screeningEvent/index.ejs
+++ b/views/events/screeningEvent/index.ejs
@@ -14,9 +14,15 @@ Aa-4
             <div class="form-group">
                 <label>劇場</label>
                 <select class="form-control" name="theater">
-                    <option value="">選択してください</option>
-                    <% for (const movieTheater of movieTheaters) { %>
-                    <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
+                    <% if (user.permission.movieTheaters.length === 0) { %>
+                        <option value="">選択してください</option>
+                        <% for (const movieTheater of movieTheaters) { %>
+                            <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
+                        <% } %>
+                    <% } else { %>
+                        <% for (const movieTheater of user.permission.movieTheaters) { %>
+                            <option value="<%= movieTheater.branchCode %>"><%= movieTheater.name.ja %></option>
+                        <% } %>
                     <% } %>
                 </select>
             </div>
